--- a/1styrs/index.html
+++ b/1styrs/index.html
@@ -10,7 +10,7 @@
   </head>
   <body><div id="app" data-v-app=""></div>
 <div class="mt-6 grid gap-4 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 min-h-0 min-w-0">
-  <a href="" class="group card relative image-full bg-base-100 shadow-xl aspect-[8/5] illustration chart-card min-h-0 min-w-0">
+  <a href="./QQ/index.html" class="group card relative image-full bg-base-100 shadow-xl aspect-[8/5] illustration chart-card min-h-0 min-w-0">
   <figure>
     <img class="w-full aspect-[8/5]" src="./img/QQ.jpg">
   </figure>
