--- a/1styrs/QQ/index.html
+++ b/1styrs/QQ/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<!-- saved from url=(0032)https://phira.moe/chart/2708#ldb -->
 <html lang="en" data-theme="dark" class="bg-base-200"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <link rel="icon" href="https://phira.moe/favicon.ico">
+    <link rel="icon" href="https://github.com/BiebieCup/image/blob/main/QQ.jpg?raw=true">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phira</title>
+    <title>BEMANI Sound Team ”PHQUASE & ZAQUVA” - QQ</title>
     <script type="module" crossorigin="" src="main-4c2352c0.js.下载"></script>
     <link rel="modulepreload" crossorigin="" href="https://phira.moe/assets/runtime-dom.esm-bundler-5c0a6d5a.js">
     <link rel="stylesheet" href="runtime-dom-662d62f9.css">
